<resources>
    <string name="app_name">Rails Of India</string>

    <!--Icons Strings-->
    <string name="pnr_icon">\ue900</string>
    <!--Icons Strings-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="quota">
        <item>GN-General Quota</item>
        <item>LD-Ladies Quota</item>
        <item>HO-Head quarters/high official Quota</item>
        <item>DF-Defence Quota</item>
        <item>PH-Parliament house Quota</item>
        <item>FT-Foreign Tourist Quota</item>
        <item>DP-Duty Pass Quota</item>
        <item>TQ-Tatkal Quota</item>
        <item>PT-Premium Tatkal Quota</item>
        <item>SS-Female(above 45 Year)/Senior Citizen/Travelling alone</item>
        <item>HP-Physically Handicapped Quota</item>
        <item>RE-Railway Employee Staff on Duty for the train</item>
        <item>GNRS-General Quota Road Side</item>
        <item>OS-Out Station</item>
        <item>PQ-Pooled Quota</item>
        <item>RC(RAC)-Reservation Against Cancellation</item>
        <item>RS-Road Side</item>
        <item>YU-Yuva</item>
        <item>LB-Lower Berth</item>
    </string-array>

    <string-array name="category">
        <item>First class Air-Conditioned:1A</item>
        <item>AC 2-tier sleeper:2A</item>
        <item>First class:FC</item>
        <item>AC 3 Tier:3A</item>
        <item>AC 3 Tier Economy:3E</item>
        <item>AC chair Car:CC</item>
        <item>Sleeper Class:SL</item>
        <item>Second Sitting:2S</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="home">Home</string>
    <string name="saved_pnr">Saved Pnrs</string>
    <string name="cancelled_trains">Cancelled Trains</string>
    <string name="rescheduled_trains">Rescheduled Trains</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="notifications">Notifications</string>
    <string name="no_data_found">No Notifications \n Found</string>
    <string name="searchString">search trains by no</string>
    <string name="widget_title">Pnr Status</string>
    <string name="facts">Facts</string>
    <string name="about_us">Rails Of India is a final Capstone Project in Android Nanodegree Offered by Udacity.\n\n This app is developed by Rajesh Gosemath(MAD - Mobile Application Developer)</string>
    <string name="pnr_status">Pnr Status</string>
    <string name="train_status">Train Status</string>
    <string name="trains_name_no">Trains Name/No</string>
    <string name="train_route">Train Route</string>
    <string name="seat_availability">Seat Availability</string>
    <string name="enter_pnr_status">Enter Pnr Number</string>
    <string name="pnr_status_info">Pnr number is a 10 - digit number on the top of your ticket.\nThe Pnr request is not available between 2 to 4 pm due to server maintainence.</string>
    <string name="enter_pnr_number">Enter pnr number</string>
    <string name="notifications_text">Notifications</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="clear_saved_pnrs">Clear Saved Pnrs</string>
    <string name="clear_all_notifications">Clear All Notifications</string>
    <string name="enter_train_number">Enter train number</string>
    <string name="train_route_info">Train route provides list of stations in visiting  order.Click on the locaion button at the bottom to see route on Google Map</string>
    <string name="clear">clear</string>
    <string name="cancel">cancel</string>
    <string name="train_status_info">Live Train status gives the current station of the train</string>
    <string name="seat_availability_info">The Station Codes are available at the Official Indian Railway website</string>
    <string name="enter_source_code">Enter source station code</string>
    <string name="enter_destination_code">Enter destination station code</string>

    <!--banner ads-->
    <string name="banner_footer">ca-app-pub-3764011845414430/1664478307 </string>
    <string name="train_name_no_info">Enter train name/number to get details about train.Partial names are also allowed</string>
    <string name="share_using">Share using</string>
    <string name="indian_rail_facts">Indian Railways Facts</string>
    <string name="facts_text">Facts</string>
    <string name="facts_title">Facts</string>
    <string name="train_status_title">Live Train Status</string>
    <string name="pnr_title">Pnr Status</string>
    <string name="pnr_details">Pnr Status Details</string>
    <string name="seat_availability_details">Seat Availability Details</string>
    <string name="train_name_number">Train Name/Number</string>
    <string name="train_name_number_details">Train Name/Number Details</string>
    <string name="train_route_details">Train Route Details</string>
    <string name="results">Search Result</string>
    <string name="ok">ok</string>
    <string name="logo">Train Logo</string>
    <string name="pnr_info">Pnr Information</string>
    <string name="input_submit">Input Submit</string>
    <string name="train_route_map">Get map view of the train route</string>
    <string name="train_name">Train Name</string>
    <string name="train_number">Train Number</string>
    <string name="train_results">Results</string>
    <string name="current_status">Current Status</string>
    <string name="train_status_name_number">Train Name Number</string>
    <string name="current_station">Current Station</string>
    <string name="pnr_number">Pnr Number</string>
    <string name="pnr_train_name">Train Name</string>
    <string name="pnr_train_number">Train Number</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="reserved_upto">Reserved Upto</string>
    <string name="select_date">Select date</string>
    <string name="default_date">19-02-2017</string>
    <string name="classlevel">Class</string>
    <string name="category">Category</string>
    <string name="sr_no">Sr No.</string>
    <string name="status">Status</string>
    <string name="runs_on">Runs On</string>
    <string name="passenger_number">Passenger Number</string>
    <string name="booking_status">Booking Status</string>
    <string name="station">Station</string>
    <string name="code">Code</string>
    <string name="day">Day</string>
    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="fragmentId">fragmentId</string>
    <string name="search_String">searchString</string>
    <string name="trainRoute">trainRoute</string>
    <string name="Notifications">Notifications</string>
    <string name="no_notifications_found">No Notifications Found</string>
    <string name="SearchActivity">SearchActivity</string>
    <string name="ErrorStream">Error closing stream</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="error">Error</string>
    <string name="pnrStatus">pnrStatus</string>
    <string name="loading">Loading</string>
    <string name="date_format">yyyyMMdd</string>
    <string name="testAdsDeviceId">F8BBAB0E3BCB44423AD273ADC677CF57</string>
    <string name="invalidInput">Invalid Input</string>
    <string name="invalidInputMsg">Please Enter Valid Input</string>
    <string name="liveStatusError">Live Status Error</string>
    <string name="liveStatusErrorMsg">Train not scheduled to run on this date</string>
    <string name="pnrError">Pnr Status Error</string>
    <string name="pnrNotGenerated">Pnr not yet Generated</string>
    <string name="serverNotResponding">Server Not Responding</string>
    <string name="seatAvailabilityError">Seat Availability Error</string>
    <string name="seatAvailability">seatAvailability</string>
    <string name="clearNotifications">Clear Notifications</string>
    <string name="clearNotificationsWarn">Do you really want to clear notifications ?</string>
    <string name="notificationsCleared">All Notifications Cleared</string>
    <string name="clearPreferences">Clear Saved Preferences</string>
    <string name="clearPreferencesError">Do you really want to clear saved Pnrs ?</string>
    <string name="clearPreferenesCleared">All Saved Pnrs Cleared</string>
    <string name="trainNameNumber">trainNameNumber</string>
    <string name="trainRouteError">Train Route Error</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_info">This app requires an active internet connection</string>
    <string name="availability">Availability</string>
    <string name="train_number_text">Train Number :</string>
    <string name="train_name_text">Train Name :</string>
    <string name="current_status_info">Current Status of the Train would be shown here</string>
    <string name="saved_pnrs">Saved Pnrs</string>
    <string name="dash">---</string>
    <string name="time_text">Time :</string>
    <string name="date_text">Date :</string>
    <string name="pnr_number_text">Pnr Number :</string>
    <string name="searchActivity">SearchActivity</string>
    <string name="station_text">Station :</string>
    <string name="code_text">Code :</string>
    <string name="day_text">Day :</string>
    <string name="arrival_text">Arrival :</string>
    <string name="departure_text">Departure :</string>

</resources>