<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dpSize16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/textviewBox"
        android:orientation="horizontal"
        android:background="@color/dullWhite">

        <ImageView
            android:layout_width="@dimen/smallIcon"
            android:layout_height="@dimen/smallIcon"
            android:src="@drawable/ic_settings"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dpSize8"
            android:contentDescription="@string/settings"/>

    <TextView
        android:id="@+id/clear_pnr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/clear_saved_pnrs"
        android:gravity="center_vertical"
        android:textSize="@dimen/titleMediumText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/textviewBox"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dpSize16"
        android:background="@color/dullWhite">

        <ImageView
            android:layout_width="@dimen/smallIcon"
            android:layout_height="@dimen/smallIcon"
            android:src="@drawable/ic_settings"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dpSize8"
            android:contentDescription="@string/settings"/>

        <TextView
            android:id="@+id/clear_notifications"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textviewBox"
            android:text="@string/clear_all_notifications"
            android:gravity="center_vertical"
            android:textSize="@dimen/titleMediumText"/>

    </LinearLayout>

</LinearLayout>